--- a/app.html
+++ b/app.html
@@ -3,18 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Internal Ad hoc Builds</title>
+  <title>Internal Client App</title>
 </head>
 
 <body>
-  <h1>raywenderlich iOS app</h1>
-  <h2>Version 1.06 (Ad hoc)</h2>
   <li>
-    Publish Date: Dec 27, 2020
-  </li>
-  <li>
-    <a
-      href="itms-services://?action=download-manifest&url=https://USERNAME.github.io/raywenderlich/manifest.plist">Install</a>
+    <a href="itms-services://?action=download-manifest&url=https://pasin.github.io/pages/manifest.plist">Install</a>
   </li>
 </body>
 
