--- a/app.html
+++ b/app.html
@@ -2,8 +2,11 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Internal Client App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  <title>Internal Client App 1.0 Build 2</title>
 </head>
 
 <body>
