--- a/app.html
+++ b/app.html
@@ -6,10 +6,11 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <title>Internal Client App 1.0 Build 2</title>
+  <title>Internal Client App</title>
 </head>
 
 <body>
+  <h1>Client 1.0 Build 2</h1>
   <li>
     <a href="itms-services://?action=download-manifest&url=https://pasin.github.io/pages/manifest.plist">Install</a>
   </li>
